Update docs page

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -57,7 +57,7 @@
             Access powerful financial data and operations through our comprehensive API suite. 
             Built for developers, designed for performance.
         </p>
-        <a href="docs.html" class="cta-button">View Documentation</a>
+        <a href="docs" class="cta-button">View Documentation</a>
     </div>
 </body>
 </html> 
