Update html for api

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -12,7 +12,7 @@
             margin: 0 auto;
             padding: 20px;
             background-color: #f8f9fa;
-            color: #333;
+            color: #062D47;
         }
         .endpoint {
             margin-bottom: 30px;
@@ -36,17 +36,17 @@
             font-size: 0.9em;
             text-transform: uppercase;
         }
-        .post { background-color: #49cc90; color: white; }
-        .get { background-color: #61affe; color: white; }
+        .post { background-color: #f26c0d; color: white; }
+        .get { background-color: #2571A5; color: white; }
         h1 { 
-            color: #2d3748;
+            color: #062D47;
             font-size: 2.5em;
             margin-bottom: 1.5rem;
-            border-bottom: 2px solid #e9ecef;
+            border-bottom: 2px solid #f26c0d;
             padding-bottom: 0.5rem;
         }
         h2 { 
-            color: #4a5568;
+            color: #2571A5;
             margin-top: 2rem;
         }
         code {
@@ -58,7 +58,7 @@
         .route {
             font-family: 'Monaco', 'Consolas', monospace;
             font-size: 1.1em;
-            color: #2d3748;
+            color: #f26c0d;
         }
         pre {
             background-color: #f8f9fa;
@@ -70,13 +70,13 @@
         footer {
             margin-top: 50px;
             padding: 20px;
-            background-color: #2d3748;
+            background-color: #062D47;
             color: white;
             border-radius: 8px;
         }
         footer code {
-            background-color: #4a5568;
-            color: #e9ecef;
+            background-color: #2571A5;
+            color: white;
         }
     </style>
 </head>
