--- a/public/static/index.html
+++ b/public/static/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #1a1a1a, #2a2a2a);
+            background: #062D47;
             color: white;
             height: 100vh;
             display: flex;
@@ -23,7 +23,7 @@
         h1 {
             font-size: 3.5rem;
             margin-bottom: 1rem;
-            background: linear-gradient(45deg, #61affe, #49cc90);
+            background: #f26c0d;
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -38,7 +38,7 @@
             display: inline-block;
             padding: 1rem 2rem;
             font-size: 1.2rem;
-            background: linear-gradient(45deg, #61affe, #49cc90);
+            background: #f26c0d;
             color: white;
             text-decoration: none;
             border-radius: 50px;
@@ -46,7 +46,7 @@
         }
         .cta-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(97, 175, 254, 0.4);
+            box-shadow: 0 5px 15px rgba(242, 108, 13, 0.4);
         }
     </style>
 </head>
