Add fixes to private functions

--- a/src/lib/email_templates/account_access.html
+++ b/src/lib/email_templates/account_access.html
@@ -101,7 +101,7 @@
                     <p><strong>Importante:</strong> Una vez que ingrese a la cuenta, es necesario cambiar el correo electrónico registrado.</p>
                 </div>
 
-                <p>AGM creó un correo electrónico temporal para el proceso de apertura de la cuenta. Para acceder a este correo temporal, use las siguientes credenciales:</p>
+                <p>AGM creó un correo electrónico temporal como parte del proceso de apertura de la cuenta. Para acceder a este correo temporal, use las siguientes credenciales:</p>
                 
                 <div class="credentials-box">
                     <p>Enlace: {{ content.temporary_url }}</p>
@@ -111,23 +111,30 @@
             </div>
 
             <div class="section">
-                <p><strong>Recursos útiles:</strong></p>
+                <p><strong>Recurso útil (Video):</strong></p>
                 <ul>
                     <li><a href="https://drive.google.com/file/d/1sLJ2dJU8Kztdpu6aP6gB0xQAUKNUcp3A/view?usp=drive_link" class="link">Guía Explicativa de Cambio de Correo</a></li>
-                    <li><a href="https://drive.google.com/file/d/1tYVEF6zIQqJRlWiX7iqZJI4KPpFeEGAo/view?usp=drive_link" class="link">Guía de Configuración AGM Trader Key</a></li>
                 </ul>
             </div>
 
             <div class="section">
                 <p><strong>Aplicación Móvil:</strong></p>
-                <p>Para una mejor experiencia, descargue la aplicación AGM Trader desde App Store o Play Store. Una vez instalada, contáctenos para ayudarle con la configuración del sistema de seguridad AGM Trader Key.</p>
+                <p>Para una mejor experiencia, descargue la aplicación que se llama: AGM Trader desde el App Store o Play Store. Una vez instalada, contáctenos para ayudarle con la configuración del sistema de seguridad AGM Trader Key.</p>
+            </div>
+
+            <div class="section">
+                <p><strong>Recurso útil (Video):</strong></p>
+                <ul>
+                    <li><a href="https://drive.google.com/file/d/1tYVEF6zIQqJRlWiX7iqZJI4KPpFeEGAo/view?usp=drive_link" class="link">Guía de Configuración AGM Trader Key</a></li>
+                </ul>
             </div>
 
             <div class="section">
                 <p><strong>Para finalizar:</strong></p>
-                <p>La cuenta no muestra todas sus funcionalidades hasta que la misma tenga fondos, para tal propósito le estaremos enviando un segundo correo con instrucciones de transferencia. Por favor no dude en contactarnos si requiere de información adicional con respecto a su cuenta.</p>
+                <p>La cuenta no muestra todas sus funcionalidades hasta que la misma tenga fondos, para tal propósito le estaremos enviando un segundo correo con las instrucciones de transferencia.</p>
+                <p>Por favor no dude en contactarnos si requiere de información adicional con respecto a su cuenta.</p>
                 <p>Saludos,</p>
-                <p class="signature"><strong>El equipo de AGM Technology</strong></p>
+                <p class="signature">El equipo de AGM</p>
             </div>
         </div>
     </div>
