--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -275,5 +275,370 @@
         </div>
     </div>
 
+    <h1>Users API</h1>
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/users/create</span>
+        <p>Create a new user.</p>
+        <h4>Required Scope:</h4>
+        <code>users/create</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "data": "object",
+    "id": "string"
+}</code></pre>
+        <p>Note: Requires user filter enforcement on 'id' field</p>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/users/read</span>
+        <p>Read user information.</p>
+        <h4>Required Scope:</h4>
+        <code>users/read</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "query": "object"
+}</code></pre>
+        <p>Note: Requires user filter enforcement on 'id' field</p>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/users/update</span>
+        <p>Update user information.</p>
+        <h4>Required Scope:</h4>
+        <code>users/update</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "data": "object",
+    "query": "object"
+}</code></pre>
+        <p>Note: Requires user filter enforcement on 'id' field</p>
+    </div>
+
+    <h1>Trade Tickets API</h1>
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/trade_tickets/generate_trade_ticket</span>
+        <p>Generate a trade ticket.</p>
+        <h4>Required Scope:</h4>
+        <code>trade_tickets/generate_trade_ticket</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "indices": "string",  // Comma-separated indices
+    "flex_query_dict": "object"
+}</code></pre>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/trade_tickets/generate_client_confirmation_message</span>
+        <p>Generate a client confirmation message.</p>
+        <h4>Required Scope:</h4>
+        <code>trade_tickets/generate_client_confirmation_message</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "trade_data": "object"
+}</code></pre>
+    </div>
+
+    <h1>Tickets API</h1>
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/tickets/create</span>
+        <p>Create a new ticket.</p>
+        <h4>Required Scope:</h4>
+        <code>tickets/create</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "data": "object",
+    "id": "string"
+}</code></pre>
+        <p>Note: Requires user filter enforcement</p>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/tickets/read</span>
+        <p>Read tickets.</p>
+        <h4>Required Scope:</h4>
+        <code>tickets/read</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "query": "object"  // Optional, defaults to empty object
+}</code></pre>
+        <p>Note: Requires user filter enforcement</p>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/tickets/update</span>
+        <p>Update a ticket.</p>
+        <h4>Required Scope:</h4>
+        <code>tickets/update</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "data": "object",
+    "query": "object"  // Optional, defaults to empty object
+}</code></pre>
+        <p>Note: Requires user filter enforcement</p>
+    </div>
+
+    <h1>Risk Profiles API</h1>
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/risk_profiles/create</span>
+        <p>Create a new risk profile.</p>
+        <h4>Required Scope:</h4>
+        <code>risk_profiles/create</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "data": "object",
+    "id": "string"
+}</code></pre>
+    </div>
+
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/risk_profiles/read</span>
+        <p>Read all risk profiles.</p>
+        <h4>Required Scope:</h4>
+        <code>risk_profiles/read</code>
+    </div>
+
+    <h1>Accounts API</h1>
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/accounts/create</span>
+        <p>Create a new account.</p>
+        <h4>Required Scope:</h4>
+        <code>accounts/create</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "data": "object",
+    "id": "string"
+}</code></pre>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/accounts/read</span>
+        <p>Read accounts.</p>
+        <h4>Required Scope:</h4>
+        <code>accounts/read</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "query": "object"
+}</code></pre>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/accounts/update</span>
+        <p>Update an account.</p>
+        <h4>Required Scope:</h4>
+        <code>accounts/update</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "data": "object",
+    "query": "object"
+}</code></pre>
+    </div>
+
+    <h1>Notifications API</h1>
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/notifications/create</span>
+        <p>Create a new notification.</p>
+        <h4>Required Scope:</h4>
+        <code>notifications/create</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "notification": "object",
+    "type": "string"
+}</code></pre>
+    </div>
+
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/notifications/read</span>
+        <p>Read all notifications.</p>
+        <h4>Required Scope:</h4>
+        <code>notifications/read</code>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/notifications/read_by_type</span>
+        <p>Read notifications by type.</p>
+        <h4>Required Scope:</h4>
+        <code>notifications/read_by_type</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "type": "string"
+}</code></pre>
+    </div>
+
+    <h1>Reporting API</h1>
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/reporting/extract</span>
+        <p>Extract reporting data.</p>
+        <h4>Required Scope:</h4>
+        <code>reporting/extract</code>
+    </div>
+
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/reporting/transform</span>
+        <p>Transform reporting data.</p>
+        <h4>Required Scope:</h4>
+        <code>reporting/transform</code>
+    </div>
+
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/reporting/get_clients_report</span>
+        <p>Get clients report.</p>
+        <h4>Required Scope:</h4>
+        <code>reporting/get_clients_report</code>
+    </div>
+
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/reporting/get_accrued_interest</span>
+        <p>Get accrued interest report.</p>
+        <h4>Required Scope:</h4>
+        <code>reporting/get_accrued_interest</code>
+    </div>
+
+    <h1>Investment Proposals API</h1>
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/investment_proposals/read</span>
+        <p>Read investment proposals.</p>
+        <h4>Required Scope:</h4>
+        <code>investment_proposals/read</code>
+    </div>
+
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/investment_proposals/backup_investment_proposals</span>
+        <p>Backup investment proposals.</p>
+        <h4>Required Scope:</h4>
+        <code>investment_proposals/backup_investment_proposals</code>
+    </div>
+
+    <h1>Flex Query API</h1>
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/flex_query/fetch</span>
+        <p>Fetch flex queries.</p>
+        <h4>Required Scope:</h4>
+        <code>flex_query/fetch</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "queryIds": "array"
+}</code></pre>
+    </div>
+
+    <h1>Email API</h1>
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/email/send_email</span>
+        <p>Send an email.</p>
+        <h4>Required Scope:</h4>
+        <code>email/send_email</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "content": "object",
+    "client_email": "string",
+    "subject": "string",
+    "email_template": "string"
+}</code></pre>
+    </div>
+
+    <h1>Document Center API</h1>
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/document_center/get_folder_dictionary</span>
+        <p>Get folder dictionary.</p>
+        <h4>Required Scope:</h4>
+        <code>document_center/get_folder_dictionary</code>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/document_center/read</span>
+        <p>Read files.</p>
+        <h4>Required Scope:</h4>
+        <code>document_center/read</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "query": "object"
+}</code></pre>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/document_center/delete</span>
+        <p>Delete a file.</p>
+        <h4>Required Scope:</h4>
+        <code>document_center/delete</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "document": "object",
+    "parent_folder_id": "string"
+}</code></pre>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/document_center/upload</span>
+        <p>Upload a file.</p>
+        <h4>Required Scope:</h4>
+        <code>document_center/upload</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "file_name": "string",
+    "mime_type": "string",
+    "file_data": "string",
+    "parent_folder_id": "string",
+    "document_info": "object",
+    "uploader": "string"
+}</code></pre>
+    </div>
+
+    <h1>Advisors API</h1>
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/advisors/commissions</span>
+        <p>Read commissions.</p>
+        <h4>Required Scope:</h4>
+        <code>advisors/commissions</code>
+    </div>
+
+    <div class="endpoint">
+        <span class="method post">POST</span>
+        <span class="route">/advisors/read</span>
+        <p>Read advisors.</p>
+        <h4>Required Scope:</h4>
+        <code>advisors/read</code>
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "query": "object"
+}</code></pre>
+    </div>
+
+    <h1>Account Management API</h1>
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/account_management/accounts</span>
+        <p>Get accounts.</p>
+        <h4>Required Scope:</h4>
+        <code>account_management/accounts</code>
+    </div>
+
 </body>
 </html> 
