--- a/src/lib/email_templates/email_change.html
+++ b/src/lib/email_templates/email_change.html
@@ -111,6 +111,10 @@
             </div>
 
             <div class="section">
+                <p>¿Necesita ayuda con este proceso?</p>
+                <a href="https://calendly.com/jc-agmtechnology/30min" class="button" target="_blank">Agendar una reunión de asistencia</a>
+            </div>
+            <div class="section">
                 <p>Por favor no dude en contactarnos si requiere asistencia.</p>
                 <p>Saludos,</p>
                 <p class="signature">El equipo de AGM</p>
