Add client fees reporting endpoint and update documentation
- Introduced a new GET endpoint for retrieving client fees report at `/reporting/client_fees`.
- Implemented the `get_client_fees` function in the reporting module to handle the retrieval of client fees data.
- Updated API documentation to include the new endpoint and its required scope.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -616,6 +616,14 @@
 
     <div class="endpoint">
         <span class="method get">GET</span>
+        <span class="route">/reporting/client_fees</span>
+        <p>Get client fees report.</p>
+        <h4>Required Scope:</h4>
+        <code>reporting/client_fees</code>
+    </div>
+
+    <div class="endpoint">
+        <span class="method get">GET</span>
         <span class="route">/reporting/nav</span>
         <p>Get NAV report.</p>
         <h4>Required Scope:</h4>
@@ -652,14 +660,6 @@
         <p>Get consolidated dimensional table.</p>
         <h4>Required Scope:</h4>
         <code>reporting/dimensional_table</code>
-    </div>
-
-    <div class="endpoint">
-        <span class="method get">GET</span>
-        <span class="route">/reporting/get_accrued_interest</span>
-        <p>Get accrued interest report.</p>
-        <h4>Required Scope:</h4>
-        <code>reporting/get_accrued_interest</code>
     </div>
 
     <h1>Email API</h1>
