Remove obsolete migration script and README file
- Deleted migrate_accounts.py as it is no longer needed for account migration.
- Removed README.md file which contained outdated test information.
- Added new endpoint documentation for listing risk profiles in docs.html.
- Introduced a new 'name' column in the Supabase model for risk profiles.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -581,6 +581,18 @@
 }</code></pre>
     </div>
 
+    <div class="endpoint">
+        <span class="method get">GET</span>
+        <span class="route">/risk_profiles/list</span>
+        <p>List risk profiles.</p>
+        <h4>Required Scope:</h4>
+        <code>risk_profiles/list</code>     
+        <h4>Request Body:</h4>
+        <pre><code>{
+    "query": "object"
+}</code></pre>
+    </div>
+
     <h1>Reporting API</h1>
     <div class="endpoint">
         <span class="method get">GET</span>
