--- a/src/lib/email_templates/application_email_confirmation_en.html
+++ b/src/lib/email_templates/application_email_confirmation_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,11 +73,11 @@
             <img src="cid:logo" alt="AGM Logo">
         </div>
         <div class="content">
-            <h1>Confirmación de Correo Electrónico</h1>
+            <h1>Email Confirmation</h1>
 
             <div class="section">
-                <p>Estimado/a {{ content.name }},</p>
-                <p>Para completar la verificación de su correo electrónico, por favor ingrese el siguiente código en la plataforma:</p>
+                <p>Dear client,</p>
+                <p>To complete the verification of your email address, please enter the following code in the platform:</p>
             </div>
 
             <div class="code-box">
@@ -85,13 +85,13 @@
             </div>
 
             <div class="section">
-                <p>Este código expirará en <strong>10&nbsp;minutos</strong>. Si no solicitó esta verificación, puede ignorar este mensaje.</p>
+                <p>This code will expire in <strong>10&nbsp;minutes</strong>. If you did not request this verification, you can ignore this message.</p>
             </div>
 
             <div class="section">
-                <p>Si necesita ayuda, no dude en responder a este correo o en contactarnos directamente.</p>
-                <p>Saludos cordiales,</p>
-                <p class="signature">El equipo de AGM</p>
+                <p>If you need help, feel free to reply to this email or contact us directly.</p>
+                <p>Best regards,</p>
+                <p class="signature">The AGM Team</p>
             </div>
         </div>
     </div>
