Refactor risk archetype evaluation in investment proposal creation
- Updated the risk archetype selection logic in create_investment_proposal to directly compare numeric values, improving accuracy and performance.
- Modified the email change template to update the Calendly link for scheduling assistance, ensuring users have the correct resource for support.

--- a/src/lib/email_templates/email_change.html
+++ b/src/lib/email_templates/email_change.html
@@ -112,7 +112,8 @@
 
             <div class="section">
                 <p>¿Necesita ayuda con este proceso?</p>
-                <a href="https://calendly.com/jc-agmtechnology/30min" class="button" target="_blank">Agendar una reunión de asistencia</a>
+                <a href="https://calendly.com/mjc-agmtechnology/30min" class="button">Agendar una reunión de asistencia</a>
+                <!-- <a href="https://calendly.com/jc-agmtechnology/30min" class="button" target="_blank">Agendar una reunión de asistencia</a> -->
             </div>
             <div class="section">
                 <p>Por favor no dude en contactarnos si requiere asistencia.</p>
