Enhance email functionality and update run script
- Added a new route for sending lead reminder emails in the email module.
- Updated the Gmail class to include a method for sending lead reminder emails.
- Modified the task reminder email template for improved clarity.
- Simplified the gunicorn command in the run script by removing the workers parameter.

--- a/src/lib/email_templates/lead_reminder.html
+++ b/src/lib/email_templates/lead_reminder.html
@@ -57,11 +57,11 @@
             <img src="cid:logo" alt="AGM Logo">
         </div>
         <div class="content">
-            <h1>Pending Task Reminder</h1>
+            <h1>Lead Reminder</h1>
             <p>Dear AGM Employee,</p>
-            <p>This is a friendly reminder to complete the following task:</p>
-            <p><strong>{{ content.task_name }}</strong></p>
-            <p>Please log in to the platform and complete the task as soon as possible.</p>
+            <p>This is a friendly reminder to follow up with the following lead:</p>
+            <p><strong>{{ content.lead_name }}</strong></p>
+            <p>Please log in to the platform and complete the follow up with the lead as soon as possible.</p>
         </div>
     </div>
 </body>
