Update account management functionality and email template
- Added imports for new functions: get_security_questions, apply_fee_template, and update_account_alias in the accounts module.
- Modified the Spanish email template to provide clearer instructions regarding password changes for Interactive Brokers.

--- a/src/lib/email_templates/credentials_es.html
+++ b/src/lib/email_templates/credentials_es.html
@@ -94,11 +94,8 @@
                     <p>Usuario: {{ content.username }}</p>
                     <p>Contraseña: {{ content.password }}</p>
                 </div>
-            </div>
-            
-            <div class="section">
-                <p><strong>Recurso útil (Video):</strong></p>
-                <a href="https://drive.google.com/file/d/1sLJ2dJU8Kztdpu6aP6gB0xQAUKNUcp3A/view?usp=drive_link" class="button">Guía Explicativa de Cambio de Correo</a>
+
+                <p>Interactive Brokers va a pedir que cambie su contraseña, por favor apunte su nueva contraseña para poder ingresar a su cuenta mas adelante.</p>
             </div>
 
             <div class="section">
