Add /docs endpoint to API routes documentation
- Included the /docs route in the HTML documentation for API endpoints, providing users with access to the documentation via a dedicated GET request.
- This addition enhances the overall usability of the API by making documentation more accessible.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -33,6 +33,7 @@
     <tr><td>/advisors/read</td><td>GET</td><td></td></tr>
     <tr><td>/applications/read</td><td>GET</td><td></td></tr>
     <tr><td>/contacts/read</td><td>GET</td><td></td></tr>
+    <tr><td>/docs</td><td>GET</td><td></td></tr>
     <tr><td>/fee_template_requests/read</td><td>GET</td><td></td></tr>
     <tr><td>/investment_proposals/read</td><td>GET</td><td></td></tr>
     <tr><td>/leads/follow_up/read</td><td>GET</td><td></td></tr>
