Enhance document upload functionality by adding 'name' metadata field
- Updated the `upload_document` function in both the accounts component and document manager to include a new parameter: `name`.
- Added the `name` field to the Supabase model for improved document metadata handling.
- This enhancement allows for more detailed information to be associated with uploaded documents, improving data organization and retrieval capabilities.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -41,6 +41,7 @@
     <tr><td>/management_type_requests/read</td><td>GET</td><td></td></tr>
     <tr><td>/pending_tasks/read</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/clients</td><td>GET</td><td></td></tr>
+    <tr><td>/reporting/ibkr_account_details</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/nav</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/open_positions</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/proposals_equity</td><td>GET</td><td></td></tr>
