Add DELETE method for document management and refactor routes

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -20,6 +20,7 @@
     <tr><td>/accounts/create</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/documents</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/documents</td><td>POST</td><td></td></tr>
+    <tr><td>/accounts/documents</td><td>DELETE</td><td></td></tr>
     <tr><td>/accounts/ibkr/account_email</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/bank_instructions</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/ibkr/change_financial_information</td><td>POST</td><td></td></tr>
@@ -45,8 +46,6 @@
     <tr><td>/accounts/ibkr/user</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/wire_instructions</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/withdraw</td><td>POST</td><td></td></tr>
-    <tr><td>/accounts/ibkr/withdrawable_cash</td><td>GET</td><td></td></tr>
-    <tr><td>/accounts/instructions</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/instructions</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/read</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/update</td><td>POST</td><td></td></tr>
