Update API documentation and enhance document retrieval routes
- Removed the obsolete `/accounts/ibkr/bank_instructions` route from the documentation.
- Added new routes for `/documents/get_document_data` and `/documents/read` to the API documentation.
- Simplified the `read_documents_route` by removing the account_id parameter, improving the function's usability.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -22,7 +22,6 @@
     <tr><td>/accounts/documents</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/documents</td><td>DELETE</td><td></td></tr>
     <tr><td>/accounts/ibkr/account_email</td><td>POST</td><td></td></tr>
-    <tr><td>/accounts/ibkr/bank_instructions</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/ibkr/change_financial_information</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/clp_capability</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/deposit</td><td>POST</td><td></td></tr>
@@ -62,6 +61,8 @@
     <tr><td>/contacts/read</td><td>GET</td><td></td></tr>
     <tr><td>/contacts/update</td><td>POST</td><td></td></tr>
     <tr><td>/docs</td><td>GET</td><td></td></tr>
+    <tr><td>/documents/get_document_data</td><td>GET</td><td></td></tr>
+    <tr><td>/documents/read</td><td>GET</td><td></td></tr>
     <tr><td>/email/send_email/application_link</td><td>POST</td><td></td></tr>
     <tr><td>/email/send_email/credentials</td><td>POST</td><td></td></tr>
     <tr><td>/email/send_email/email_confirmation</td><td>POST</td><td></td></tr>
