Add PATCH route for updating account documents and enhance documentation
- Introduced a new PATCH route at `/documents` for updating account documents, allowing users to modify document details such as category, name, type, issued date, expiry date, and comments.
- Updated the API documentation to include the new PATCH method for document management, ensuring clarity on available operations.
- Refactored the accounts module to integrate the new update functionality, improving overall account document management capabilities.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -20,6 +20,7 @@
     <tr><td>/accounts/create</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/documents</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/documents</td><td>POST</td><td></td></tr>
+    <tr><td>/accounts/documents</td><td>PATCH</td><td></td></tr>
     <tr><td>/accounts/documents</td><td>DELETE</td><td></td></tr>
     <tr><td>/accounts/ibkr/account_email</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/change_financial_information</td><td>POST</td><td></td></tr>
