Update reporting module with new route and enhanced screening functionality
- Added a new GET route for `/reporting/ibkr_account_pending_tasks` to retrieve pending tasks for IBKR accounts.
- Modified the `/screen_person` route to accept POST requests and include an additional parameter for `account_id`, improving the screening process.
- Updated the `screen_person` function to handle the new parameter and return a structured response with FATF status and screening results.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -94,11 +94,13 @@
     <tr><td>/pending_tasks/update</td><td>POST</td><td></td></tr>
     <tr><td>/reporting/clients</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/ibkr_account_details</td><td>GET</td><td></td></tr>
+    <tr><td>/reporting/ibkr_account_pending_tasks</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/nav</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/open_positions</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/proposals_equity</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/rtd</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/run</td><td>GET</td><td></td></tr>
+    <tr><td>/reporting/screen_person</td><td>POST</td><td></td></tr>
     <tr><td>/risk_profiles/create</td><td>POST</td><td></td></tr>
     <tr><td>/risk_profiles/list</td><td>GET</td><td></td></tr>
     <tr><td>/risk_profiles/read</td><td>GET</td><td></td></tr>
