Add account screening functionality and update routes
- Introduced new routes for account screening at `/accounts/screening` with GET and POST methods, allowing retrieval and submission of screening data.
- Implemented `read_account_screenings` and `screen_person` functions to handle account screening logic, including OFAC results and FATF status.
- Updated the database schema to include an `account_screening` table for storing screening results.
- Removed the deprecated `screen_person` function from the reporting module to streamline functionality.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -48,6 +48,8 @@
     <tr><td>/accounts/ibkr/withdraw</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/instructions</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/read</td><td>GET</td><td></td></tr>
+    <tr><td>/accounts/screening</td><td>GET</td><td></td></tr>
+    <tr><td>/accounts/screening</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/update</td><td>POST</td><td></td></tr>
     <tr><td>/ada/chat</td><td>POST</td><td></td></tr>
     <tr><td>/advisor_changes/create</td><td>POST</td><td></td></tr>
@@ -100,7 +102,6 @@
     <tr><td>/reporting/proposals_equity</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/rtd</td><td>GET</td><td></td></tr>
     <tr><td>/reporting/run</td><td>GET</td><td></td></tr>
-    <tr><td>/reporting/screen_person</td><td>POST</td><td></td></tr>
     <tr><td>/risk_profiles/create</td><td>POST</td><td></td></tr>
     <tr><td>/risk_profiles/list</td><td>GET</td><td></td></tr>
     <tr><td>/risk_profiles/read</td><td>GET</td><td></td></tr>
