Update IBKR account routes and add financial ranges functionality
- Renamed the route for changing financial information to `/ibkr/change_investment_experience` and updated the corresponding function to reflect this change.
- Introduced a new route `/ibkr/financial_ranges` to retrieve financial ranges via the IBKR API.
- Updated the accounts module to include the new `get_financial_ranges` function for fetching financial range data.
- Enhanced logging to clarify actions related to investment experience changes.

--- a/public/static/docs.html
+++ b/public/static/docs.html
@@ -23,12 +23,13 @@
     <tr><td>/accounts/documents</td><td>PATCH</td><td></td></tr>
     <tr><td>/accounts/documents</td><td>DELETE</td><td></td></tr>
     <tr><td>/accounts/ibkr/account_email</td><td>POST</td><td></td></tr>
-    <tr><td>/accounts/ibkr/change_financial_information</td><td>POST</td><td></td></tr>
+    <tr><td>/accounts/ibkr/change_investment_experience</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/clp_capability</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/deposit</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/details</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/ibkr/documents</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/fee_template</td><td>POST</td><td></td></tr>
+    <tr><td>/accounts/ibkr/financial_ranges</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/ibkr/forms</td><td>POST</td><td></td></tr>
     <tr><td>/accounts/ibkr/instructions</td><td>GET</td><td></td></tr>
     <tr><td>/accounts/ibkr/pending_alias</td><td>PATCH</td><td></td></tr>
